positioned sidebar and entered some fixture data to model spacing and margins properly

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ body {
 
 	background-color: gray;
 	border-radius: 4px;
+	border: 2px solid white;
+	
 }
 	.main-navbar ul {
 		/* ul has default margins? */
@@ -71,8 +73,12 @@ body {
 
 	.main-content {
 		display: flex;
-		margin-top: 15px;
+		margin-top: 24px;
+		margin-bottom: 24px;
 		background-color: gray;
+		border-radius: 4px;
+		border: 2px solid white;
+
 	}
 		.post-list {
 			/* Divs by default are willing to grow their width, by specifying this, you cap the width */
@@ -119,11 +125,21 @@ body {
 						margin-bottom: 10px;
 						font-size: 1.2em;
 					}
-		.sidebar {
+		.sidebar-content {
 			width: 30%;
-			height: 10px;
-			outline: 2px solid red;
+
+			margin-top: 24px;
+			margin-bottom: 36px;
+			margin-right: 24px;
+			
+			border: 2px solid white;
+			border-radius: 4px;
 		}
+			.sidebar-items {
+				margin: 24px;
+				text-align: center;
+				font-size: 25px;
+			}
 
 /* Floater Div START*/
 .floater-social {
